--- a/Configs/Home/.config/latte/XeroSweet.layout.latte
+++ b/Configs/Home/.config/latte/XeroSweet.layout.latte
@@ -17,10 +17,10 @@ plugin=org.kde.latte.containment
 raiseOnActivityChange=false
 raiseOnDesktopChange=false
 settingsComplexity=1
-timerHide=700
+timerHide=500
 timerShow=0
 viewType=0
-visibility=2
+visibility=3
 wallpaperplugin=org.kde.image
 
 [Containments][12][Applets][40]
@@ -250,14 +250,16 @@ backgroundRadius=45
 disablePanelShadowForMaximized=true
 durationTime=x3
 hideScreenGapForMaximized=true
-iconSize=20
+iconSize=22
 inConfigureAppletsMode=true
-lengthExtMargin=12
+lengthExtMargin=9
 maxLength=96
+minLength=24
 mouseWheelActions=false
 panelPosition=10
 panelSize=96
 panelTransparency=24
+proportionIconSize=1.8000000000000007
 screenEdgeMargin=10
 shadowOpacity=5
 shadowSize=20
@@ -269,7 +271,6 @@ splitterPosition2=6
 tasksUpgraded=true
 themeColors=5
 thickMargin=55
-titleTooltips=false
 windowColors=ActiveWindowColors
 zoomLevel=0
 
