--- a/Configs/Home/.config/latte/XeroSweet.layout.latte
+++ b/Configs/Home/.config/latte/XeroSweet.layout.latte
@@ -327,7 +327,7 @@ PreloadWeight=0
 [Containments][14][Applets][75][Configuration][General]
 hoverAction=PreviewWindows
 isInLatteDock=true
-launchers59=applications:firefox.desktop,applications:org.kde.dolphin.desktop,applications:org.kde.konsole.desktop,file:///usr/bin/pamac-manager?iconData=iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAACXBIWXMAAA7EAAAOxAGVKw4bAAACJUlEQVRoge2ZzWsTQRTAf7O72Ww_RLxI9eAf4smDt1704MGb0JN4ELypVdtD_SpFbbWJUlRoD34cBKF4FRQpQgURQSVVA8WaSFFjIek2s3iqtLsbmqSzmQTnd3x57Hs_dndm3gYMhv8bEQ4MnL54yLLFJLBHQz-1EeKbrAbH714683Rj2AnnVWU1Uy77fUEQtK65OrAsa6_nullgk4AVTiz77dc8QBAEVHw_8lREBNqx-XXieosIdBpGQDdGQDeRfUAFj2-MxMaPnDyrvFbH3wEjoBsjoBsjoBsl-8Cxw_30H9i_Zd7G_WH2-SvuP5nddm0ldyAz_YAXr-frzp9785bszEMVpdUIdPXuYGxqmvefclvmflz4wpXsPbyeXhWl1b0DjtfN8PUMi0uFmjlLxR9cuDaJ7XWrKqtOQAhBYLsMjo7zq1SK_F5aWWHw6jhV4SBE5FtC0yhdhYRl8ceXnBudoLK6-i_ur61xfuwmPys-wlK78DW0CoVPmXGnS8u2WVz-zcjEHYZPnUAIweVbU-QLyzgpt-nr1iKR47STSvFuIc_tmUcAzH_I4aa9JEolIwCQctM8ezkHQLqrJ6kyyQlAso2vsy2BWpNXK-n4s5AR0E1D78DBowNJ9bGJXbv76s5tSKCRC7eKjn-EjIBujIBuon8xSVnU0Ug9SCkj415E4PvXz0PtKCGlLBTzuaFwPG622wnsA-KnD334QB6IzqsGQ_P8BdL7m18gpyDWAAAAAElFTkSuQmCC,applications:systemsettings.desktop,applications:signal-desktop.desktop,applications:caprine.desktop,applications:thunderbird.desktop,applications:org.kde.krita.desktop
+launchers59=applications:firefox.desktop,applications:org.kde.dolphin.desktop,applications:org.kde.konsole.desktop
 launchersGroup=Global
 scrollTasksEnabled=true
 showOnlyCurrentActivity=false
